--- a/1_1/code/package.json
+++ b/1_1/code/package.json
@@ -5,29 +5,36 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint",
-    "start":"nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app.js",
+    "test": "mocha tests/**/*Tests.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.0"
+    "body-parser": "^1.20.0",
+    "express": "^4.18.0",
+    "mongoose": "^6.3.1"
   },
   "devDependencies": {
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "nodemon": "^2.0.15"
+    "eslint-plugin-react": "^7.29.4",
+    "mocha": "^10.0.0",
+    "nodemon": "^2.0.16",
+    "should": "^13.2.3",
+    "sinon": "^13.0.2",
+    "supertest": "^6.2.3"
   },
   "nodemonConfig": {
     "restartable": "rs",
     "ignore": [
       "node_modules/**/node_modules"
     ],
-    "delay": "2500",
+    "delay": "1000",
     "env": {
       "NODE_ENV": "development",
-      "PORT":4000
+      "PORT": 4000
     }
   }
 }
